fixed tooltip hide issue and courses overlap text

--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -466,10 +466,10 @@
     min-width: 250px;
     width: 24%;
     max-width: 350px;
-    display: inline-block;
-    overflow: hidden;
 		background: #f7f8fd;
 		margin: 0% 0.2% 0.4% 0.2%;
+		position: relative;
+		float: left;
   }
   .card_list .card_item .card_title_sec {
 		margin: 0;
@@ -488,12 +488,12 @@
   }
   .card_list .card_item .card_desc, .card_list .card_item .card_edit_sec {
 	background-color: rgba(255, 255, 255, 0.5);
-	height: 100px;
+	min-height: 100px;
 	overflow: hidden;
-	position: relative;
 	padding: 5px;
 	border-top: 1px dotted #CDCDCD;
 	text-align: left;
+	margin-bottom: 30px;
   }
   
   .card_list .card_item .card_desc:hover, .card_list .card_item .card_edit_sec:hover {
@@ -642,7 +642,8 @@
     padding: 10px;
     display: inline-block;
     font-weight: 400;
-    letter-spacing: 1px;
+		letter-spacing: 1px;
+		max-width: 190px;
 }
   
   .card_list .home_card .card_desc {
@@ -847,7 +848,6 @@
 	background: #f7f8fd;
 	float: left;
 	width: 100%;
-	overflow: hidden;
 }
   
 .side-menu {
@@ -867,7 +867,6 @@
 	min-height:600px;
 	background: #fff;
 	width: calc(100% - 58px);
-	overflow: hidden;
 	-webkit-transition: all 250ms cubic-bezier(0.765, -0.42, 0.65, 1.345);
 	-moz-transition: all 250ms cubic-bezier(0.765, -0.42, 0.65, 1.345);
 	-o-transition: all 250ms cubic-bezier(0.765, -0.42, 0.65, 1.345);
