--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -723,9 +723,7 @@
   padding: 0px;
   width: 100%;
 }
-.timeline ul.timeline-small{
-  width: auto;
-}
+ 
 .timeline ul.timeline-small li{
  min-width: 50px;
 }
@@ -741,7 +739,7 @@
   display: inline-block;
   border-radius: 30px;
   position: relative;
-  z-index: 1;
+  z-index: 11;
   top: -7px;
 }
 .timeline ul::after {
@@ -749,25 +747,25 @@
   position: absolute;
   background: #cde4fc;
   height: 5px;
-  width: 99%;
+  width: 100%;
   border-radius: 10px;
   left: 0px;
   top: 0px;
 }
 .timeline ul li:first-child{
   text-align: left;
-  width: 10% !important;
+  width: auto !important;
 }
 .timeline ul li:last-child{
   text-align: right;
-  width: 10% !important;
+  width: auto !important;
 }
 .timeline ul.timeline-small li:first-child{
   text-align: left;
   width: auto !important;
 }
 .timeline ul.timeline-small li:last-child{
-  text-align: right;
+  text-align: center;
   width: auto !important;
 }
 .timeline ul li.blank span {
