--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2956,3 +2956,6 @@ button.accordion.active:after {
         font-family: 'Roboto', sans-serif;
       }
     }
+    textarea{
+      resize: none;
+    }
